# ecom_dynamic_pricing_optimization

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: config.yaml
data/processed/: baseline_results.json  col_definitions.json  dcn_results.json  dml_results.json  hpo_results.json  optimizer_summary.json
docs/: economics_primer.md
models/: dcn_scaler.pkl
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_baseline_models.ipynb  04_causal_ml_dml.ipynb  05_deep_learning_dcn.ipynb  06_hyperparameter_tuning.ipynb  07_pricing_optimizer.ipynb  08_model_evaluation.ipynb
src/api/: main.py  predict.py  schemas.py
src/data/: demand_simulator.py
src/features/: __init__.py  pipeline.py
src/models/: causal_dml.py
src/monitoring/: drift_detector.py
tests/: conftest.py  test_api.py  test_features_and_models.py  test_guardrails.py
