[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ecom-dynamic-pricing"
version = "0.1.0"
description = "E-Commerce Dynamic Pricing Optimization using Causal ML"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@email.com" }]
keywords = ["machine-learning", "causal-inference", "pricing", "econml", "mlops"]

[tool.setuptools.packages.find]
where = ["src"]

# ─── Black (Code Formatter) ───────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | notebooks
  | .venv
)/
'''

# ─── isort (Import Sorter) ────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["features", "models", "api", "monitoring"]
skip_glob = ["notebooks/*", ".venv/*"]

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --cov=src --cov-report=html --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "integration: marks tests requiring external services",
    "unit: marks pure unit tests"
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
fail_under = 30
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:"
]

# ─── mypy (Type Checker) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["notebooks/", ".venv/"]
